# finance-data

./: .env.example  .gitignore  README.md  init_meta.py  pyproject.toml
app/: config.py  main.py  meta_knowledge_service.py  query_service.py  response.py  services.py  utils.py
app/agent/: context.py  graph.py  llm.py  state.py
app/agent/nodes/: add_extra_context.py  correct_sql.py  execute_sql.py  extract_keywords.py  filter_metric.py  filter_table.py  generate_sql.py  merge_retrieved_info.py  recall_column.py  recall_metric.py  recall_value.py  validate_sql.py
app/api/: dependencies.py
app/api/routers/: query_router.py
app/clients/: embedding_client_manager.py  es_client_manager.py  mysql_client_manager.py  qdrant_client_manager.py  tei_embeddings.py
app/conf/: app_config.py  text_config.py
app/core/: context.py  lifespan.py  log.py
app/models/es/: __init__.py  value_info_es.py
app/models/mysql/: __init__.py
app/models/qdrant/: __init__.py  column_info_qdrant.py  metric_info_qdrant.py
app/prompt/: prompt_loader.py
app/repositories/es/: __init__.py  values_es_repository.py
app/repositories/mysql/: __init__.py  dw_mysql_repository.py  meta_mysql_repository.py
app/repositories/qdrant/: __init__.py  column_qdrant_respository.py  (+1 more)
app/routers/: repayments.py  risk.py  wealth.py
app/scripts/: build_meta_knowledge.py
conf/: app_config.yaml  meta_config.yaml
docs/: DATA_SCHEMA.md
prompts/: filter_table_info.prompt  generate_sql.prompt
sql/: meta.sql
static/: query.html
tests/: nl2sql_queries.py  test_nl2sql_acceptance.py
