[project]
name = "finance-data"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "rich>=14.2.0",
    "pymysql>=1.1.1",
    "pytest>=8.4.1",
    "python-dotenv>=1.0.1",
    "tzdata>=2026.2",
    "uvicorn>=0.34.0",
    "asyncmy>=0.2.11",
    "cryptography>=49.0.0",
    "elasticsearch[async]>=8,<9",
    "langchain>=1.3.11",
    "langchain-deepseek>=1.1.0",
    "langchain-huggingface>=1.2.2",
    "langgraph>=1.2.6",
    "loguru>=0.7.3",
    "omegaconf>=2.3.1",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.18.0",
    "sqlalchemy>=2.0.51",
    "jieba>=0.42.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "ruff>=0.15.17",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
pythonpath = ["."]
